--- a/Manpower_MVC/Views/Employee/Index.cshtml
+++ b/Manpower_MVC/Views/Employee/Index.cshtml
@@ -96,7 +96,7 @@
                     "<input id='addIns' type='button' value='新增加減項' class='btn btn-default' onclick='addOne()' />" +
                     "<input id='celIns' type='button' value='刪除' class='btn btn-danger' onclick='delOne()' />" +
                     "</div>" + "<div class='form-group'>" +
-                    "<table id='ins' width='100%'><thead><tr><th>項目</th><th>金額</th><th>備註</th></tr></thead>" +
+                    "<table id='ins'><thead><tr><th width='30%'>項目</th><th width='30%'>金額</th><th width='30%'>備註</th></tr></thead>" +
                     "<tbody></tbody></table>" +
                     "</div>"
                 );
