--- a/Manpower_MVC/Views/Owner/Index.cshtml
+++ b/Manpower_MVC/Views/Owner/Index.cshtml
@@ -99,7 +99,7 @@
                     "<input id='addIns' type='button' value='新增工地' class='btn btn-default' onclick='addOne()' />" +
                     "<input id='celIns' type='button' value='刪除' class='btn btn-danger' onclick='delOne()' />" +
                     "</div>" + "<div class='form-group'>" +
-                    "<table width='100%'><thead><tr><th>工地名稱</th><th>連絡人</th><th>電話</th><th>地址</th></tr></thead>" +
+                    "<table width='100%'><thead><tr><th width='25%'>工地名稱</th><th width='25%'>連絡人</th><th width='25%'>電話</th><th width='25%'>地址</th></tr></thead>" +
                     "<tbody></tbody></table>" +
                     "</div>"
                 );
